Initial fixes to get the par generation working so the webserver repo can have a new test app

--- a/war/formtags-war/build.xml
+++ b/war/formtags-war/build.xml
@@ -5,6 +5,9 @@
 	<property file="${basedir}/../../build.versions"/>
 	<property file="${basedir}/build.properties"/>
 
+	
+	<import file="${basedir}/../../virgo-build/common/common.xml"/>
+
 	<tstamp>
 		<format property="timestamp" pattern="yyyyMMddHHmmss" timezone="GMT"/>
 	</tstamp>
