--- a/build-formtags/build.xml
+++ b/build-formtags/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="s2ap-formtags-sample" default="precommit">
+<project name="virgo-formtags-sample" default="precommit">
 
 	<path id="bundles">
 		<pathelement location="${basedir}/../war/formtags-war" />
